[package]
name = "chipscraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
byteorder = "1.4.3"
codepage-437 = "0.1.0"
flate2 = "1.0.26"
http = "0.2.9"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.175"
serde_derive = "1.0.175"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
urlencoding = "2.1.3"
